src/tests/krate/publish/snapshots/all__krate__publish__basics__new_krate-4.snap
---
source: src/tests/krate/publish/basics.rs
expression: app.emails_snapshot()
---
To: foo@example.com
From: noreply@crates.io
Subject: crates.io: Successfully published foo_new@1.0.0
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

Hello foo!

A new version of the package foo_new (1.0.0) was published by your account =
(https://crates.io/users/foo) at [0000-00-00T00:00:00Z].

If you have questions or security concerns, you can contact us at help@crat=
es.io.
