src/tests/krate/publish/snapshots/all__krate__publish__basics__new_krate_duplicate_version.snap
---
source: src/tests/krate/publish/basics.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "crate version `1.0.0` is already uploaded"
    }
  ]
}
